# Swarm-CoreServices-Data-and-Monitoring

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml.example  .gitmodules  .markdown-link-check.json  .pre-commit-config.yaml  .secrets.baseline  CLAUDE_FLOW_MEMORY_ACCESS.md  CLAUDE_INSTANCES_CONNECTION_GUIDE.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  Jenkinsfile.example  LICENSE  PERFORMANCE_TOOLKIT_SUMMARY.md  QUICK_CONNECT_CARD.md  README.md  SHARED_DATABASE.md  docker-compose.dev.yml  docker-compose.unified.yml  pyproject.toml  pytest.ini  requirements-security.txt  requirements.txt
.claude/: settings.json
.claude-flow/: config.yaml  daemon-state.json  swarm-composition.json
.swarm/: hnsw.index  hnsw.metadata.json  schema.sql  state.json
agents/: architect.yaml  coder.yaml  reviewer.yaml  security-architect.yaml  tester.yaml
certs/: ca.srl
config/: monitoring.env.example  pgbouncer.ini  userlist.txt
deployment/: DEPLOYMENT_GUIDE.md
docker/: pg_hba.conf.ssl  postgresql.conf.ssl
docs/: API_REFERENCE.md  ARCHITECTURE_OVERVIEW.md  BACKUP_RESTORE.md  BULK_OPERATIONS.md  CITUS_IMPLEMENTATION_SUMMARY.md  CITUS_SETUP.md  CI_CD_FILES_SUMMARY.md  CI_CD_GUIDE.md  DEPLOYMENT_ENVIRONMENTS.md  DEVELOPER_GUIDE.md  DISTRIBUTED_CONNECTION_QUICKSTART.md  DISTRIBUTED_POOL_SUMMARY.md  DR_DRILL_SCHEDULE.md  DR_PROCEDURES.md  ERROR_HANDLING.md  ERROR_HANDLING_SUMMARY.md  HEALTH_CHECK_ARCHITECTURE.md  HEALTH_CHECK_SERVICE.md  HEALTH_MONITORING_DEPLOYMENT.md  HNSW_PROFILE_INTEGRATION.md  LOAD_TESTING.md  MEMORY_ARCHITECTURE.md  MEMORY_CONFIGURATION_COMPLETE.md  MIGRATION_GUIDE.md  MIGRATION_PATHS.md  MIGRATION_TO_HA.md  MONITORING.md  MONITORING_QUICK_REFERENCE.md  MONITORING_SUMMARY.md  ONBOARDING_SUMMARY.md  OPERATIONS_GUIDE.md  PATRONI_INTEGRATION_SUMMARY.md  PATRONI_SETUP.md  PERFORMANCE_QUICK_REFERENCE.md  PERFORMANCE_TUNING.md  PERFORMANCE_WORKFLOW.md  POOL_CAPACITY.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_SUMMARY.md  QUICK_REFERENCE.md  (+15 more)
examples/: README.md  basic_usage.py  batch_operations.py  bulk_insert_demo.py  cache_integration_example.py  connection_pooling.py  distributed-connection-example.py  error_handling.py  hnsw_profile_usage.py  nodejs_basic.js  python_embeddings.py  vector_search.py
mcp-server/: Dockerfile
scripts/: HEALTH_CHECK_QUICK_START.md  README.md  STACK_ARCHITECTURE.txt  STACK_MANAGER_IMPLEMENTATION.md  STACK_MANAGER_QUICKREF.md  STACK_MANAGER_README.md  benchmark_redis_realistic.py  connect-all-networks.sh  db_health_check.py  generate_ssl_certs.sh  health_check_service.py  install-health-service.sh  install-hooks.sh  migrate-to-unified-stack.sh  migrate_sqlite_to_postgres.py  production-readiness-check.sh  quick-production-validation.sh  setup-stack-manager-aliases.sh  setup.sh  stack-manager-completion.bash  stack-manager.sh  start_database.sh  start_monitoring.sh  start_pgbouncer.sh  start_redis.sh  test-stack-manager.sh  test_patroni_connection.py  test_pool_capacity.py  test_redis_cache.py  validate_data_integrity.py  validate_redis_deployment.py
src/: test_bulk_ops.py  test_vector_ops.py
tests/: COVERAGE_SUMMARY.md  HOOKS_SUMMARY.md  README.md  benchmark_performance.py  demo_bad_formatting.py  (+15 more)
(+267 files in other folders)
